# DLP_Monitoring

./: .dockerignore  .env  .env.docker  Dockerfile  Makefile  README.md  docker-compose.yaml
agent/: CMakeLists.txt  agent.cpp
agent/config/: agent.conf.example
agent/include/: Agent.h  ConfigManager.h  ContentAnalyzer.h  EventQueue.h  FileMonitor.h  Logger.h  NetworkManager.h  PolicyChecker.h
agent/src/: Agent.cpp  ConfigManager.cpp  ContentAnalyzer.cpp  EventQueue.cpp  FileMonitor.cpp  Logger.cpp  NetworkManager.cpp  PolicyChecker.cpp
backend/: go.mod  go.sum  main.go
backend/config/: config.go
backend/handlers/: agent_handler.go  auth_handler.go  event_handler.go  handler.go  incident_handler.go  policy_handler.go
backend/middleware/: cors.go  logging.go
backend/models/: agent.go  event.go  incident.go  policy.go  user.go
backend/store/: agent_store.go  gorm_store.go  incident_store.go  policy_store.go  store.go  user_store.go
backend/utils/: logger.go  validator.go
database/: init.sql
gui/: CMakeLists.txt  main.cpp
gui/include/: AgentCreationDialog.h  AgentInfoDialog.h  ApiClient.h  DataModels.h  Dialogs.h  LoginDialog.h  MainWindow.h
gui/src/: AgentCreationDialog.cpp  AgentInfoDialog.cpp  ApiClient.cpp  DataModels.cpp  Dialogs.cpp  LoginDialog.cpp  MainWindow.cpp
gui/widgets/: IncidentsTable.cpp  IncidentsTable.h
gui/widgets/include/: BarChartWidget.h  ChartWidget.h  PieChartWidget.h  StatisticsTabWidget.h  StatsData.h  StatsSummaryWidget.h
gui/widgets/src/: BarChartWidget.cpp  ChartWidget.cpp  PieChartWidget.cpp  StatisticsTabWidget.cpp  StatsSummaryWidget.cpp
